erDiagram
  RESTAURANT ||--o{ COMIC : "contains"
  COMIC ||--|| LEADERBOARD_ENTRY : "projects_to"

  RESTAURANT {
    string RestaurantId PK
    string Name
  }

  COMIC {
    string ComicId PK
    int StrangenessScore
    string GenerationStatus
  }

  LEADERBOARD_ENTRY {
    string LeaderboardEntryId PK
    int Rank
    int Score
  }
